# libchardet

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  configure.in  libchardet.spec  libchardet.spec.in  libtool
.github/workflows/: c-cpp.yml  release-workflow.yml
debian/: changelog  control  libchardet-dev.install  libchardet.install  rules
pkgconfig/: libchardet.pc.in
src/: CharDistribution.cpp  JpCntx.cpp  LangBulgarianModel.cpp  LangCyrillicModel.cpp  LangGreekModel.cpp  LangHebrewModel.cpp  LangHungarianModel.cpp  LangThaiModel.cpp  Makefile  Makefile.am  Makefile.in  nsBig5Prober.cpp  nsCharSetProber.cpp  nsEUCJPProber.cpp  nsEUCKRProber.cpp  nsEUCTWProber.cpp  nsEscCharsetProber.cpp  nsEscSM.cpp  nsGB2312Prober.cpp  nsLatin1Prober.cpp  nsMBCSGroupProber.cpp  nsMBCSSM.cpp  nsSBCSGroupProber.cpp  nsSJISProber.cpp  nsUTF8Prober.cpp  nsUniversalDetector.cpp
src/.deps/: chardetor.Po  libchardet_la-CharDistribution.Plo  libchardet_la-JpCntx.Plo  libchardet_la-LangBulgarianModel.Plo  libchardet_la-LangCyrillicModel.Plo  libchardet_la-LangGreekModel.Plo  libchardet_la-LangHebrewModel.Plo  libchardet_la-LangHungarianModel.Plo  libchardet_la-LangThaiModel.Plo  libchardet_la-impl.Plo  libchardet_la-nsBig5Prober.Plo  libchardet_la-nsCharSetProber.Plo  libchardet_la-nsEUCJPProber.Plo  libchardet_la-nsEUCKRProber.Plo  libchardet_la-nsEUCTWProber.Plo  libchardet_la-nsEscCharsetProber.Plo  libchardet_la-nsEscSM.Plo  libchardet_la-nsGB2312Prober.Plo  libchardet_la-nsHebrewProber.Plo  (+8 more)
(+1 files in other folders)
